Use Java 11 utilities to create immutable copies of collections