@@ -1,4 +1,4 @@
-// Copyright (c) 2020-2023 Broadcom. All Rights Reserved.
+// Copyright (c) 2020-2024 Broadcom. All Rights Reserved.
 // The term "Broadcom" refers to Broadcom Inc. and/or its subsidiaries.
 //
 // This software, the RabbitMQ Stream Java client library, is dual-licensed under the
@@ -14,8 +14,6 @@
 // info@rabbitmq.com.
 package com.rabbitmq.stream;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
 import java.util.function.BiFunction;
@@ -40,15 +38,11 @@ public class ByteCapacity implements Comparable<ByteCapacity> {
   private static final String UNIT_TB = "tb";
 
   private static final Map<String, BiFunction<Long, String, ByteCapacity>> CONSTRUCTORS =
-      Collections.unmodifiableMap(
-          new HashMap<String, BiFunction<Long, String, ByteCapacity>>() {
-            {
-              put(UNIT_KB, (size, input) -> ByteCapacity.kB(size, input));
-              put(UNIT_MB, (size, input) -> ByteCapacity.MB(size, input));
-              put(UNIT_GB, (size, input) -> ByteCapacity.GB(size, input));
-              put(UNIT_TB, (size, input) -> ByteCapacity.TB(size, input));
-            }
-          });
+      Map.of(
+          UNIT_KB, ByteCapacity::kB,
+          UNIT_MB, ByteCapacity::MB,
+          UNIT_GB, ByteCapacity::GB,
+          UNIT_TB, ByteCapacity::TB);
 
   private final long bytes;
   private final String input;
